# agri-platform

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
database/: create_tables.sql  generate_data.py  sample_data.sql  setup_database.py
docs/: brand_guidelines.txt  database_schema_reference.txt  dev_log.txt  dev_log_ guidance.txt  test_inventory.txt
logic/: allocation_logic.py  database_helpers.py  logging_config.py  reporting.py
pages/: allocation_summary**placeholder**.html  base.html  build_allocation**placeholder**.html  build_allocation.html  buyer_pledges.html  farm_pledge_detail.html  farm_profile.html  farms.html  settings.html
pages/reusable/: allocation_table**placeholder**.html  navbar.html
setup/: setup_database.py
static/brand/: atlas_harvest.json
static/css/: main.css
static/js/: allocation**placeholder**.js
templates/: base.html  farm_profile.html  farms.html  home.html
tests/: conftest.py  test_buyer_pledges.py  test_database.py  test_farms.py
tests/database/: test_database.py  test_database_helpers.py
tests/logic/: test_allocation_logic.py  test_allocations.py  test_logging_config.py  test_reporting.py
tests/pages/: test_allocations.py  test_buyer_pledges.py  test_farms.py  test_home_page.py  test_settings.py
