[project]
name = "agri-platform"
version = "0.1.0"
description = "Version 0 prototype for an agricultural supply coordination platform."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0,<4.0",
    "reportlab>=4.4,<5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
addopts = "-ra --strict-config --strict-markers --maxfail=1"

[tool.coverage.run]
source = ["app", "database", "logic"]
branch = true
